<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_transactions"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/menu_transactions" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@android:drawable/ic_menu_sort_by_size"
            android:title="@string/menu_categories" />
        <item
            android:id="@+id/nav_charts"
            android:icon="@android:drawable/ic_menu_gallery"
            android:title="@string/menu_charts" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:title="@string/menu_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_lock_power_off"
                android:title="@string/menu_logout" />
        </menu>
    </item>
</menu>