<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:padding="8dp">
    <TextView
        android:id="@+id/textViewWidgetTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/budget_status"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewWidgetCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewWidgetTitle"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="4dp"
        android:text="@string/loading" />

    <LinearLayout
        android:id="@+id/progressContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/textViewWidgetCategory"
        android:layout_marginTop="8dp"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/progressBarBudget"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:progressTint="@color/primary" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textViewWidgetSpent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/spent_placeholder" />

            <TextView
                android:id="@+id/textViewWidgetRemaining"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/remaining_placeholder" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/textViewWidgetLastUpdated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:textSize="10sp" />
</RelativeLayout>